examples/errors/class_redeclaration.olang
Program: Main()

class Main is
    this() is
       var a : Integer
       a := Integer(10)
    end
end


class Main is
    this() is
       var a : Integer
       a := Integer(10)
    end
end
